plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

ext {
    gdxVersion = '1.13.1'
}

dependencies {
    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'Main'
}
